dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([librcksum/rsum.c])
AC_CONFIG_AUX_DIR(autotools)

dnl --- Set version strings
MAJOR_VERSION=0
MINOR_VERSION=4
MICRO_VERSION=3
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION

AC_SUBST(VERSION)

dnl --- Check for system type
AC_CANONICAL_TARGET([])

dnl --- Fire up automake
AM_INIT_AUTOMAKE(zsync,$VERSION)
AC_CONFIG_HEADERS([config.h])

dnl --- Check for programs
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_RANLIB

CFLAGS="$CFLAGS -g -Wall -I\$(top_srcdir)"
AC_C_COMPILE_FLAGS(-Wwrite-strings -Winline -W -Wunreachable-code -Winline -ffast-math)
AC_ARG_ENABLE(profile,[  --enable-profile         turns on profiling],
CFLAGS_OPT="-pg"
)

dnl --- Header files, typedefs, structures, libraries
AC_TYPE_SIZE_T
AC_CHECK_TYPE(off64_t,long long)
dnl Solaris needs -lsocket
AC_CHECK_LIB(socket,socket)
AC_CHECK_FUNCS(pwrite)
AC_ARG_ENABLE(dmalloc,[  --enable-dmalloc     use the dmalloc heap debug library],AC_CHECK_LIB(dmalloc,malloc))
AH_BOTTOM([
#ifdef HAVE_LIBDMALLOC
#include <dmalloc.h>
#endif
])

dnl --- output
AC_SUBST(ac_aux_dir)
AC_CONFIG_FILES([Makefile librcksum/Makefile zlib/Makefile libzsync/Makefile doc/Makefile])
AC_OUTPUT

