dnl Process this file with autoconf to produce a configure script.
AC_INIT([zsync],[0.4.3])
AC_CONFIG_SRCDIR([librcksum/rsum.c])
AC_CONFIG_AUX_DIR(autotools)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE
AC_CONFIG_HEADERS([config.h])

dnl --- Check for programs
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_RANLIB

CFLAGS="$CFLAGS -g -Wall -I\$(top_srcdir)"
AC_C_COMPILE_FLAGS(-Wwrite-strings -Winline -Wextra -Winline -Wmissing-noreturn -Wredundant-decls -Wnested-externs -Wshadow -Wundef -Wbad-function-cast -Wcast-align -Waggregate-return -Wvolatile-register-var -ffast-math)
AC_ARG_ENABLE(profile,[  --enable-profile         turns on profiling],
CFLAGS_OPT="-pg"
)

dnl - Large file support if available
AC_SYS_LARGEFILE
AC_FUNC_FSEEKO

dnl --- Header files, typedefs, structures, libraries
AC_TYPE_SIZE_T
dnl Solaris needs -lsocket
AC_CHECK_LIB(socket,socket)
AC_CHECK_FUNCS(pwrite)
AM_WITH_DMALLOC
AH_BOTTOM([
#ifdef WITH_DMALLOC
#include <dmalloc.h>
#endif
])

dnl --- output
AC_SUBST(ac_aux_dir)
AC_CONFIG_FILES([Makefile librcksum/Makefile zlib/Makefile libzsync/Makefile doc/Makefile])
AC_OUTPUT

